tests/error/struct_errors/assign_call.err
Error: Unsupported (at $FILE:20:4)
   | 
18 | @guppy(module)
19 | def bar() -> None:
20 |     foo().x += 1
   |     ^^^^^ Assigning to this expression is not supported

Help: Consider assigning this value to a local variable first before assigning
the field `x`

Guppy compilation failed due to 1 previous error
